--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,20 +17,9 @@ services:
     image: qdrant/qdrant
     ports:
       - "6333:6333"
+    networks:
+      - backend
 
-  # clearml:
-  #   command:
-  #     - apiserver
-  #   image: allegroai/clearml
-  #   environment:
-  #     CLEARML_WEB_HOST: https://app.clear.ml/
-  #     CLEARML_API_HOST: https://api.clear.ml
-  #     CLEARML_FILES_HOST: https://files.clear.ml
-  #     CLEARML_API_ACCESS_KEY: 4VYPTGCX8RASHZJY6XGE9LTTXFDCCX
-  #     CLEARML_API_SECRET_KEY: vb-BuH4G_4ttGDpExGDDJE6BFJL5d2zEGk133NKYj-SUlBmdzt4agY76ffslm40KLeI
-  #   ports:
-  #     - "8003:8003"
-  
   apiserver:
     command:
     - apiserver
@@ -38,9 +27,9 @@ services:
     image: allegroai/clearml:latest
     restart: unless-stopped
     volumes:
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/logs:/var/log/clearml
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/config:/opt/clearml/config
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/data/fileserver:/mnt/fileserver
+    - /opt/clearml/logs:/var/log/clearml
+    - /opt/clearml/config:/opt/clearml/config
+    - /opt/clearml/data/fileserver:/mnt/fileserver
     depends_on:
       - redis
       - mongo
@@ -55,7 +44,7 @@ services:
       CLEARML_REDIS_SERVICE_PORT: 6379
       CLEARML_SERVER_DEPLOYMENT_TYPE: linux
       CLEARML__apiserver__pre_populate__enabled: "true"
-      CLEARML__apiserver__pre_populate__zip_files: "/home/devdes/CS370/AI-Docker-Container/project/clearml/db-pre-populate"
+      CLEARML__apiserver__pre_populate__zip_files: "/opt/clearml/db-pre-populate"
       CLEARML__apiserver__pre_populate__artifacts_path: "/mnt/fileserver"
       CLEARML__services__async_urls_delete__enabled: "true"
       CLEARML__services__async_urls_delete__fileserver__url_prefixes: "[${CLEARML_FILES_HOST:-}]"
@@ -93,7 +82,7 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.18
     restart: unless-stopped
     volumes:
-      - /home/devdes/CS370/AI-Docker-Container/project/clearml/data/elastic_7:/usr/share/elasticsearch/data
+      - /opt/clearml/data/elastic_7:/usr/share/elasticsearch/data
       - /usr/share/elasticsearch/logs
 
   fileserver:
@@ -108,9 +97,9 @@ services:
       CLEARML__fileserver__delete__allow_batch: "true"
     restart: unless-stopped
     volumes:
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/logs:/var/log/clearml
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/data/fileserver:/mnt/fileserver
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/config:/opt/clearml/config
+    - /opt/clearml/logs:/var/log/clearml
+    - /opt/clearml/data/fileserver:/mnt/fileserver
+    - /opt/clearml/config:/opt/clearml/config
     ports:
     - "8081:8081"
 
@@ -122,8 +111,8 @@ services:
     restart: unless-stopped
     command: --setParameter internalQueryMaxBlockingSortMemoryUsageBytes=196100200
     volumes:
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/data/mongo_4/db:/data/db
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/data/mongo_4/configdb:/data/configdb
+    - /opt/clearml/data/mongo_4/db:/data/db
+    - /opt/clearml/data/mongo_4/configdb:/data/configdb
 
   redis:
     networks:
@@ -132,7 +121,7 @@ services:
     image: redis:6.2
     restart: unless-stopped
     volumes:
-    - /home/devdes/CS370/AI-Docker-Container/project/clearml/data/redis:/data
+    - /opt/clearml/data/redis:/data
 
   webserver:
     command:
@@ -178,8 +167,8 @@ services:
       - --fileserver-host
       - http://fileserver:8081
     volumes:
-      - /home/devdes/CS370/AI-Docker-Container/project/clearml/logs:/var/log/clearml
-      - /home/devdes/CS370/AI-Docker-Container/project/clearml/config:/opt/clearml/config
+      - /opt/clearml/logs:/var/log/clearml
+      - /opt/clearml/config:/opt/clearml/config
 
   agent-services:
     networks:
@@ -208,16 +197,16 @@ services:
       AZURE_STORAGE_KEY: ${AZURE_STORAGE_KEY:-}
       GOOGLE_APPLICATION_CREDENTIALS: ${GOOGLE_APPLICATION_CREDENTIALS:-}
       CLEARML_WORKER_ID: "clearml-services"
-      CLEARML_AGENT_DOCKER_HOST_MOUNT: "/home/devdes/CS370/AI-Docker-Container/project/clearml/agent:/root/.clearml"
+      CLEARML_AGENT_DOCKER_HOST_MOUNT: "/opt/clearml/agent:/root/.clearml"
       SHUTDOWN_IF_NO_ACCESS_KEY: 1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /home/devdes/CS370/AI-Docker-Container/project/clearml/agent:/root/.clearml
+      - /opt/clearml/agent:/root/.clearml
     depends_on:
       - apiserver
     entrypoint: >
       bash -c "curl --retry 10 --retry-delay 10 --retry-connrefused 'http://apiserver:8008/debug.ping' && /usr/agent/entrypoint.sh"
-  
+
 networks:
   backend:
     driver: bridge
